<resources>
    <string name="load_caption">Launch</string>
    <string name="invalid_url">"Must be a valid URL"</string>
    <string name="qr_button">QR code scanner</string>
    <string name="qr_cancel_button">Cancel</string>
    <string name="app_url">appUrl</string>
    <string name="scan_qr_code_caption">Scan the QR code in StudioPro</string>
    <string name="application_url_hint">Your local Mendix Studio Pro URL</string>
    <string name="enable_dev_mode">Enable developer mode</string>
    <string name="clear_data">Clean start</string>
    <string name="launch_app_caption">Launch app</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_start">Start</string>
    <string name="welcome_get_inspired_title">Get inspired</string>
    <string name="welcome_get_inspired_text">Browse through a range of sample apps</string>
    <string name="welcome_input_title">Navigate with ease</string>
    <string name="welcome_input_text">Tap with three fingers to restart your app. Tap and hold to bring up the context menu</string>
    <string name="welcome_qr_title">Preview your apps</string>
    <string name="welcome_qr_text">Scan the Studio Pro QR code to preview and debug your Mendix project</string>
    <string name="welcome_preview_app_effortlessly_title">Preview your app effortlessly.</string>
    <string name="welcome_preview_app_effortlessly_text">Scan the SP QR code to instantly preview and debug your project.</string>
    <string name="welcome_seamless_navigation_at_your_fingertips_title">Seamless navigation at your fingertips.</string>
    <string name="welcome_seamless_navigation_at_your_fingertips_text">Restart your app with a simple tap of three fingers. Access the context menu by tapping and holding.</string>
    <string name="welcome_the_history_title">The ‘History’ for hassle-free testing.</string>
    <string name="welcome_the_history_text">Access your favorite previously visited URLs without the need to retype them.</string>
    <string name="react_native_component_name">App</string>
    <string name="permission_camera_qr_scanner">To be able to scan QR codes, the app will now request access to the camera. Please accept the request.</string>
    <string name="permission_camera_qr_scanner_title">Camera access required</string>
    <string name="permission_post_notification_title">Notification access required</string>
    <string name="permission_post_notification">To be able to receive notifications, the app will now request access to the notification. Please accept the request.</string>
    <string name="generic_continue">Continue</string>
    <string name="generic_deny">Deny</string>
    <string name="error_input_app_url_invalid">Invalid app url provided</string>
    <string name="error_something_went_wrong_title">Something went wrong!</string>
    <string name="button_test_connection">Troubleshooting</string>
    <string name="button_retry">Retry</string>
    <string name="button_go_back">Go Back</string>
    <string name="button_troubleshooting">Troubleshooting</string>
    <string name="button_min_versions_guide">Make it Native Versions Guide</string>
    <string name="button_custom_developer_app_guide">Custom Developer App Guide</string>
    <string name="error_unknown_title">We\'ve encountered an issue</string>
    <string name="error_connection_title">We\'ve encountered a connection issue</string>
    <string name="error_version_title">We\'ve encountered a version issue</string>
    <string name="error_js_bundle">Metro Bundler is not running at: %1$s\n\nPlease try followings\n\n1.\t\tCheck that your app is running in Studio Pro\n2.\t\tCheck that IP is correct and accessible\n3.\t\tCheck that port %2$s and port 8083 are accessible></string>
    <string name="error_runtime_connection">Mendix runtime is not running at: %1$s\n\nPlease try followings\n\n1.\t\tCheck that port %2$s is accessible\n2.\t\tCheck that native profile is used\n3.\t\tVerify that Metro is running (You might need to restart Windows)</string>
    <string name="error_min_outdated">It seems you\'re trying to connect to a Mendix application that is not supported by this version of the app.\n\nPlease refer to our documentation to learn how to get the correct version of this app for your project.</string>
    <string name="error_studio_outdated">You are trying to connect to an older version of Mendix Studio Pro which is not supported.</string>
    <string name="error_missing_native_profile">Your Mendix app does not have a Native Mobile Profile.</string>
    <string name="error_packager_not_running">The packager is not running. Restart your runtime and try again.</string>
    <string name="error_unknown">It seems that there is an error in the app that is preventing it from functioning properly.\n\nPlease take a look at the options below to tackle the problem and get the app back on track.</string>
    <string name="loader_app_gallery">Loading App gallery…</string>
    <string name="bottom_nav_launch_app">Launch app</string>
    <string name="bottom_nav_history">History</string>
    <string name="bottom_nav_showcase">Showcase</string>
    <string name="bottom_nav_help">Help</string>
    <string name="help_open_how_to_s">Open how-to\'s</string>
    <string name="help_open_reference_guide">Open Reference guide</string>
    <string name="title_ar_unsupported">AR not fully supported</string>
    <string name="message_ar_not_supported">This device does not support all features required for AR. \n\nThis message can be safely ignored if you do not plan on testing AR with this device. \n\nFeatures missing:"</string>
    <string name="gyroscope">"Gyroscope"</string>
    <string name="acclerometer">Accelerometer</string>
    <string name="message_ar_not_fully_supported">AR is not fully supported on this device!</string>
    <string name="help_how_to_use_make_it_native_app">How to use Make it Native app</string>
    <string name="help_forum">Forum</string>
    <string name="help_slack_community">Mendix Slack Community</string>
    <string name="help_troubleshooting">Troubleshooting</string>
    <string name="help_mobile_doc">Mobile Documentation</string>
    <string name="app_launch_text_getting_ready">Getting ready…</string>
    <string name="app_launch_text_baking">Baking in the oven…</string>
    <string name="app_launch_text_crafting">Crafting…</string>
    <string name="app_launch_text_starting">Starting…</string>
    <string name="history_no_apps_launched">No apps have been launched yet.</string>
    <string name="connection_error">Connection Error.</string>
</resources>
