...
                        .height(40.dp)
                ) {
                    CustomTextField(
                        modifier = Modifier.weight(1f),
                        value = state.appUrl,
                        onValueChange = { viewModel.setAppUrl(it) },
                        placeholder = "http://runtime-url:8080",
                        keyboardOptions = KeyboardOptions.Default.copy(
                            keyboardType = KeyboardType.Uri
                        )
                    )
                    Spacer(modifier = Modifier.padding(8.dp, 0.dp, 0.dp, 0.dp))
                    Box(
...
                    modifier = Modifier
                        .fillMaxWidth()
                        .weight(1f)
                ) {
                    CustomSwitch(
                        modifier = Modifier.padding(0.dp, 0.dp, 0.dp, 16.dp),
                        title = "Clear cache",
                        checked = state.clearData,
                        onCheckedChange = { viewModel.setClearData(it) }
                    )
                    CustomSwitch(
                        title = "Developer mode",
                        checked = state.devModeEnabled,
...
