appId: "${APP_ID}"
---
- retry:
    maxRetries: 3
    commands:
        - launchApp:
            clearState: true
            permissions:
                camera: allow
                notifications: allow
        - assertVisible: "Preview your app effortlessly."
        - tapOn: "Continue"
        - assertVisible: "Seamless navigation at your fingertips."
        - tapOn: "Continue"
        - assertVisible: "The ‘History’ for hassle-free testing."
        - tapOn: "Start"
        - assertVisible: "Clear cache"
        - takeScreenshot:
            path: "maestro/tests/images/actual/${PLATFORM}/MiN_page"
        - tapOn: "http://runtime-url:8080"
        - inputText: "http://10.0.2.2:8080"
        - pressKey: Enter
        - hideKeyboard
        - takeScreenshot:
            path: "maestro/tests/images/actual/${PLATFORM}/keyboard_gone"
        - tapOn:
            text: "Launch app"
            index: 0
        - takeScreenshot:
            path: "maestro/tests/images/actual/${PLATFORM}/app-loading"
        - extendedWaitUntil:
                visible: "Widgets menu"
                timeout: 300000
        - takeScreenshot:
            path: "maestro/tests/images/actual/${PLATFORM}/app-loaded"